<resources>
    <string name="app_name">Voting Application</string>
    <string name="voting_application">Voting Application</string>
    <string name="Profile"> Profile </string>
    <string name="notifications">Notifications</string>
    <string name="candidates">Candidates</string>
    <string name="positions">Positions</string>
    <string name="voting">Voting</string>
    <string name="VotingResult">Results</string>
    <string name="Logout">Logout</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Homepage">Homepage</string>
    <string name="Home">Homepage</string>
    <string name="sign_in">Sign In</string>
    <string name="here">Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account_sign_up_here">New Account? Sign Up Here</string>
    <string name="login">Login</string>
    <string name="title_activity_navigation_header">NavigationHeaderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>