<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/Profile"/>
    <item
        android:id="@+id/nav_positions"
        android:title="@string/positions"
        android:icon="@drawable/position"/>


    <item
        android:id="@+id/nav_candidates"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/candidates"/>

    <item
        android:id="@+id/nav_voting"
        android:icon="@drawable/ic_baseline_how_to_vote_24"
        android:title="@string/voting"/>
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="Location"/>


</group>
</menu>